# woowa-learning-hub

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  LICENSE  README.md  pyproject.toml
config/: rag_models.json
docs/: agent-entrypoints.md  agent-operating-contract.md  agent-query-reformulation-contract.md  agent-session-examples.md  ai-behavior-contracts.md  architecture.md  artifact-catalog.md  asset_filename_lint.py  auth_ladder_label_parity_lint.py  capability-map.md  cs-authoring-guide.md  cs-rag-internals.md  error-recovery.md  evidence-roles.md  external-ai-operating-guide.md  external-ai-review-checklist.md  learner-memory.md  learning-flow.md  learning-system-v4.md  link_fence_false_link_check.py  local_asset_existence_lint.py  local_doc_target_lint.py  markdown_link_scanner.py  master-plan-progress.md  memory-model.md  migration-v3-codex-handoff.md  migration-v3-runbook.md  onboarding.md  orchestrator-30-worker-fleet.md  orchestrator.md  orphaned_auxiliary_asset_scan.py  personas-and-intents.md  platform-compatibility.md  primer_link_contract_lint.py  rag-runtime.md  readme_anchor_reverse_link_check.py  readme_bridge_overlap_check.py  stale_asset_reverse_link_check.py  token-budget.md
gemini-skills/: learning-memory.md  mission-coach.md  peer-analysis.md
playbooks/: github-cli-guide.md  pr-learning-note-template.md  pr-learning-pipeline.md
schemas/: archive-status.schema.json  assistant-response-quality.schema.json  candidate-interpretation.schema.json  coach-context.schema.json  coach-response.schema.json  coach-run-result.schema.json  (+23 more)
(+3344 files in other folders)
