[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woowa-learning-hub"
version = "0.1.0"
description = "Woowa 미션 학습 AI 코치 (peer PR + CS RAG 통합)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "jsonschema>=4.0",
    "FlagEmbedding>=1.3",
    "lancedb>=0.30",
    "pyarrow>=18",
    "pytest>=7.4",
]

[project.optional-dependencies]
dev = []
qdrant = [
    "qdrant-client>=1.17,<2",
]

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-dir]
scripts = "scripts"
